--- a/src/style.css
+++ b/src/style.css
@@ -1,87 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    font-family: Inter, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  font-family: Inter, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
 }
 
-main, aside {
-    display: grid;
-    justify-items: center;
+main,
+aside {
+  display: grid;
+  justify-items: center;
 }
-
-
+.label-input {
+  display: grid;
+  gap: 2px;
+}
 label {
-    display: grid;
-    gap: 2px;
+  font-family: Inter, sans-serif;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .checkbox-group {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 form {
-    display: grid;
-    gap: 16px;
-    padding: 35px 16px;
-    width: 100%;
-    max-width: 404px;
+  display: grid;
+  gap: 16px;
+  padding: 35px 16px;
+  width: 100%;
+  max-width: 404px;
 }
 
-input[type=text],
-input[type=email],
+input[type="text"],
+input[type="email"],
 textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    resize: vertical;
+  width: 100%;
+  padding: 10px;
+  border: 0.1rem solid #000;
+  border-radius: 10px;
+  resize: vertical;
+  font-family: Inter, sans-serif;
+  font-size: 12px;
+}
+textarea {
+  resize: none;
+}
+input[type="checkbox"] {
+  appearance: none;
+  width: 1em;
+  height: 1em;
+  border: 1px solid currentColor;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+input[type="checkbox"]:checked::before {
+  content: "✔";
+  font-size: 1em;
 }
 
-input[type=checkbox] {
-    appearance: none;
-    width: 1em;
-    height: 1em;
-    border: 1px solid currentColor;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-input[type=checkbox]:checked::before {
-    content: "✔";
-    font-size: 0.5em;
-}
 ::placeholder {
-    color: #C2C2C2;
+  color: #c2c2c2;
 }
 
 .btn-group {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
-    border: 1px solid #000;
-    border-radius: 4px;
-    padding: 6px 12px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 6px 12px;
 }
 
-button[type=reset] {
-    background: #fff;
+button[type="reset"] {
+  background: #fff;
 }
 
-button[type=submit] {
-    background: #000;
-    color: #fff;
+button[type="submit"] {
+  background: #000;
+  color: #fff;
 }
