--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,12 @@ button {
     padding: 6px 12px;
 }
 
+.btn-dark{
+    background-color: black;
+    color:white;
+    
+}
+
 button[type=reset] {
     background: #fff;
 }
